--- a/package.json
+++ b/package.json
@@ -1,31 +1,83 @@
 {
-    "name": "ohm",
-    "displayName": "Ohm Language",
-    "description": "Ohm language support for Visual Studio Code",
-    "author": "Attila Hajdrik",
-    "version": "1.0.0",
-    "publisher": "attilah",
-    "engines": {
-        "vscode": "^1.5.0"
-    },
-    "categories": [
-        "Languages"
+  "name": "ohm",
+  "displayName": "Ohm Language",
+  "description": "Ohm language support for Visual Studio Code",
+  "author": "Attila Hajdrik",
+  "version": "1.0.0",
+  "publisher": "attilah",
+  "engines": {
+    "vscode": "^1.5.0"
+  },
+  "categories": [
+    "Languages"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/attilah/ohm-vscode"
+  },
+  "main": "./src/extension.js",
+  "activationEvents": [],
+  "contributes": {
+    "languages": [
+      {
+        "id": "ohm",
+        "aliases": [
+          "Ohm",
+          "ohm"
+        ],
+        "extensions": [
+          ".ohm"
+        ],
+        "configuration": "./language-configuration.json"
+      }
     ],
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/attilah/ohm-vscode"
-    },
-    "contributes": {
-        "languages": [{
-            "id": "ohm",
-            "aliases": ["Ohm", "ohm"],
-            "extensions": [".ohm"],
-            "configuration": "./language-configuration.json"
-        }],
-        "grammars": [{
-            "language": "ohm",
-            "scopeName": "source.ohm",
-            "path": "./syntaxes/ohm.tmLanguage.json"
-        }]
+    "grammars": [
+      {
+        "language": "ohm",
+        "scopeName": "source.ohm",
+        "path": "./syntaxes/ohm.tmLanguage.json"
+      }
+    ],
+    "commands": [
+      {
+        "command": "ohm.edit",
+        "title": "Open interactive Ohm editor"
+      }
+    ],
+    "customEditors": [
+      {
+        "viewType": "ohm.editor",
+        "displayName": "Ohm Editor",
+        "selector": [
+          {
+            "filenamePattern": "*.ohm"
+          }
+        ],
+        "priority": "option"
+      }
+    ],
+    "menus": {
+      "editor/context": [
+        {
+          "when": "resourceLangId == ohm",
+          "command": "ohm.edit",
+          "group": "ohm"
+        }
+      ],
+      "editor/title": [
+        {
+          "when": "resourceLangId == ohm",
+          "command": "ohm.edit",
+          "group": "stateml"
+        }
+      ],
+      "editor/title/context": [
+        {
+          "when": "resourceLangId == ohm",
+          "command": "ohm.edit",
+          "group": "stateml"
+        }
+      ]
     }
+  }
 }
